// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Character CheckBadge adds the correct answer modifier 1`] = `
.c0 {
  position: absolute;
  display: block;
  width: auto;
  top: -.3em;
  right: -.3em;
  text-align: center;
  background: #67c7eb;
  color: rgba(255,255,255,1);
  padding: .1em .2em;
  box-sizing: border-box;
  border: solid #67c7eb;
  border-width: 2px 2px 3px 3px;
  border-radius: 30px;
  -webkit-transform: rotate(2deg);
  -ms-transform: rotate(2deg);
  transform: rotate(2deg);
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-animation: 1s fGBwqf,1s dYtXmW 2s;
  animation: 1s fGBwqf,1s dYtXmW 2s;
  font-size: 1.8rem;
  z-index: 10;
}

<div
  className="c0"
>
  Ok
</div>
`;

exports[`Character CheckBadge adds the incorrect answer modifier 1`] = `
.c0 {
  position: absolute;
  display: block;
  width: auto;
  top: -.3em;
  right: -.3em;
  text-align: center;
  background: #ED1D24;
  color: rgba(255,255,255,1);
  padding: .1em .2em;
  box-sizing: border-box;
  border: solid #ED1D24;
  border-width: 2px 2px 3px 3px;
  border-radius: 30px;
  -webkit-transform: rotate(2deg);
  -ms-transform: rotate(2deg);
  transform: rotate(2deg);
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-animation: 1s fGBwqf,1s dYtXmW 2s;
  animation: 1s fGBwqf,1s dYtXmW 2s;
  font-size: 1.8rem;
  z-index: 10;
}

<div
  className="c0"
>
  Ok
</div>
`;

exports[`Character CheckBadge renders correctly 1`] = `
.c0 {
  position: absolute;
  display: block;
  width: auto;
  top: -.3em;
  right: -.3em;
  text-align: center;
  background: #222;
  color: rgba(255,255,255,1);
  padding: .1em .2em;
  box-sizing: border-box;
  border: solid #222;
  border-width: 2px 2px 3px 3px;
  border-radius: 30px;
  -webkit-transform: rotate(2deg);
  -ms-transform: rotate(2deg);
  transform: rotate(2deg);
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-animation: 1s fGBwqf,1s dYtXmW 2s;
  animation: 1s fGBwqf,1s dYtXmW 2s;
  font-size: 1.8rem;
  z-index: 10;
}

<div
  className="c0"
>
  Ok
</div>
`;
